# mcp-common

./: .gitignore  .pre-commit-hooks.yaml  CHANGELOG.md  DEVCONTAINER_1PASSWORD.md  README.md  pyproject.toml
cursor-marketplace/agent-memory/: .dockerignore  .env.example  .gitignore  .mcp.json  .pre-commit-config.yaml  .secrets.baseline  AGENTS.md  ARCHITECTURE.md  Dockerfile  README.md  docker-compose.yml  mcp-plugin.toml  opencode.json  pyproject.toml
cursor-marketplace/agent-memory/.claude-plugin/: marketplace.json  plugin.json  registry-entry.json
cursor-marketplace/agent-memory/.cursor-plugin/: plugin.json
cursor-marketplace/agent-memory/.openhands/: mcp.json
cursor-marketplace/agent-memory/hooks/: setup-cli
cursor-marketplace/agent-memory/scripts/: seed_workspace.py
cursor-marketplace/agent-memory/tests/: conftest.py
cursor-marketplace/awx-mcp/: .dockerignore  .gitignore  .mcp.json  .mcp.json.example  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  Dockerfile  E2E_TESTING.md  LICENSE  README.md  TOOL_EXAMPLES.md  env.example  mcp-plugin.toml  opencode.json  pyproject.toml  setup_e2e.sh
cursor-marketplace/awx-mcp/.claude-plugin/: marketplace.json  plugin.json  registry-entry.json
cursor-marketplace/awx-mcp/.cursor-plugin/: plugin.json
cursor-marketplace/awx-mcp/.openhands/: mcp.json
cursor-marketplace/awx-mcp/hooks/: setup-cli
cursor-marketplace/awx-mcp/tests/: test_awx_client.py  test_cli.py  test_config.py  test_e2e.py  test_http_auth_middleware.py  test_log_parser.py  test_mcp_server.py  test_smoke.py
cursor-marketplace/dc-support-mcp/: .gitignore  .mcp.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  mcp-plugin.toml  opencode.json  pyproject.toml
cursor-marketplace/dc-support-mcp/.claude-plugin/: marketplace.json  plugin.json  registry-entry.json
cursor-marketplace/dc-support-mcp/.cursor-plugin/: plugin.json
cursor-marketplace/dc-support-mcp/.openhands/: mcp.json
cursor-marketplace/dc-support-mcp/docs/: CREDENTIALS.md  DEPLOYMENT_STRATEGIES.md  IREN_CUSTOMIZATION.md  ORI_API_FINDINGS.md  SCALING_SOLUTION.md  USER_GUIDE.md  VENDOR_ARCHITECTURE.md
cursor-marketplace/dc-support-mcp/hooks/: setup-cli
cursor-marketplace/dc-support-mcp/tests/: __init__.py  conftest.py
cursor-marketplace/gpu-diag-mcp/: .gitignore  .mcp.json  AGENTS.md  CHANGELOG.md  README.md  mcp-plugin.toml  opencode.json  pyproject.toml
cursor-marketplace/gpu-diag-mcp/.claude-plugin/: marketplace.json  plugin.json  registry-entry.json
cursor-marketplace/gpu-diag-mcp/.cursor-plugin/: plugin.json
cursor-marketplace/gpu-diag-mcp/.openhands/: mcp.json
cursor-marketplace/gpu-diag-mcp/rules/: gpu-diag.mdc
cursor-marketplace/gpu-diag-mcp/tests/: conftest.py
cursor-marketplace/ipa-mcp/: AGENTS.md  CHANGELOG.md  README.md  env.example  mcp-plugin.toml  opencode.json  pyproject.toml
cursor-marketplace/ipa-mcp/.claude-plugin/: marketplace.json  plugin.json  registry-entry.json
cursor-marketplace/ipa-mcp/.cursor-plugin/: plugin.json
cursor-marketplace/ipa-mcp/.openhands/: mcp.json
cursor-marketplace/ipa-mcp/hooks/: setup-cli
cursor-marketplace/ipa-mcp/tests/: conftest.py  test_cli.py  test_helpers.py  test_ipa_client.py  test_tools.py
cursor-marketplace/maas-mcp/: .dockerignore  .gitignore  .mcp.json.example  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  Dockerfile  README.md  env.example  mcp-plugin.toml  pyproject.toml
cursor-marketplace/maas-mcp/.claude-plugin/: marketplace.json  plugin.json  registry-entry.json
cursor-marketplace/maas-mcp/.cursor-plugin/: plugin.json
cursor-marketplace/maas-mcp/hooks/: setup-cli
cursor-marketplace/maas-mcp/rules/: bmc-credential-sync.mdc  maas-operations.mdc
cursor-marketplace/maas-mcp/scripts/: release_bond_jammy_nodes.py
cursor-marketplace/maas-mcp/tests/: __init__.py  test_bmc_health.py  test_bond_audit.py  test_boot_images.py  test_cli_create_token.py  test_cli_deploy_and_cache.py  test_cli_machine_404.py  test_config.py  test_drift_auditor.py  test_imports.py  test_maas_client.py  test_maas_client_urls.py  test_netbox_client.py  test_netbox_helper.py  test_netbox_resolve.py  test_network_profile.py  test_node_status.py  test_redfish_bmc.py  test_server_helpers.py  test_server_redfish_password_sync.py  test_validate_health.py
cursor-marketplace/netbox-mcp/: .dockerignore  .env.example  .gitignore  .mcp.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  docker-entrypoint.sh  mcp-plugin.toml  opencode.json  pyproject.toml
cursor-marketplace/netbox-mcp/.claude-plugin/: marketplace.json  plugin.json  registry-entry.json
cursor-marketplace/netbox-mcp/.cursor-plugin/: plugin.json
cursor-marketplace/netbox-mcp/.github/: CODEOWNERS
cursor-marketplace/netbox-mcp/.openhands/: mcp.json
cursor-marketplace/netbox-mcp/chart/: Chart.yaml  values.yaml
cursor-marketplace/netbox-mcp/evals/: README.md  _dataset.py  cli_eval.py  combined_eval.py  mcp_eval.py  scenarios.json
cursor-marketplace/netbox-mcp/hooks/: setup-cli
cursor-marketplace/netbox-mcp/tests/: __init__.py  conftest.py  test_batch_fetch.py  test_brief.py  test_changelogs.py  test_cli.py  test_cli_search.py  test_cli_update_device.py  test_client.py  test_client_patch.py  test_completion.py  test_config.py  test_error_handling.py  test_filter_parsing_cli.py  test_filter_serialization.py  test_filter_validation.py  test_http_auth_integration.py  test_http_transport.py  test_logging_smoke.py  test_lookup_device.py  (+8 more)
cursor-marketplace/redfish-mcp/: .env.example  .gitignore  .gitleaks.toml  .mcp.json  AGENTS.md  AI_AGENT_GUIDE.md  CHANGELOG.md  CLAUDE.md  README.md  mcp-plugin.toml  opencode.json  pyproject.toml  test.sh
cursor-marketplace/viz-mcp/: .gitignore  .mcp.json  AGENTS.md  CHANGELOG.md  README.md  mcp-plugin.toml  pyproject.toml
cursor-marketplace/weka-mcp/: .gitignore  .mcp.json.example  AGENTS.md  CHANGELOG.md  CLAUDE.md  Dockerfile.mock  PROJECT_SUMMARY.md  README.md  WEKA_API_SUMMARY.md  docker-compose.mock.yml  docker-entrypoint.sh  env.example  mcp-plugin.toml  opencode.json  pyproject.toml
(+524 files in other folders)
