[project]
name = "mcp-common"
version = "0.10.0"
description = "Shared utilities and testing infrastructure for MCP server projects"
readme = "README.md"
requires-python = ">=3.12"
license = "Apache-2.0"
keywords = ["mcp", "model-context-protocol", "fastmcp", "testing"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "fastmcp>=3.0.0,<4",
    "pydantic-settings>=2.0",
    "typer>=0.15.0",
]

[project.scripts]
mcp-plugin-gen = "mcp_common.plugin_cli:main"

[project.optional-dependencies]
testing = [
    "pytest>=8.0",
    "anyio>=4.0",
    "pytest-httpx>=0.34",
    "inline-snapshot>=0.15",
]
eval = [
    "inspect-ai",
    "openai>=1.0",
]
eval-scoring = [
    "deepeval",
]

[dependency-groups]
dev = [
    "mcp-common[testing]",
    "mcp-common[eval]",
    "mypy>=1.13",
    "ruff>=0.8",
    "pre-commit>=4.0",
    "python-semantic-release>=10.4,<11",
]

[build-system]
requires = ["uv_build>=0.10.4,<0.11.0"]
build-backend = "uv_build"

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
branch = "main"
upload_to_vcs_release = true
tag_format = "v{version}"
allow_zero_version = true
major_on_zero = false

[tool.semantic_release.commit_parser_options]
allowed_tags = ["feat", "fix", "docs", "chore", "refactor", "test", "ci", "perf"]
minor_tags = ["feat"]
patch_tags = ["fix", "perf"]

[tool.semantic_release.changelog]
[tool.semantic_release.changelog.default_templates]
changelog_file = "CHANGELOG.md"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "RUF"]
ignore = ["E402", "E501", "SIM102", "SIM105", "SIM108", "SIM117", "UP047"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "unit: unit tests",
    "integration: integration tests",
    "e2e: end-to-end tests",
    "eval: LLM-as-judge evaluation tests (requires mcp-common[eval])",
]
