[build-system]
requires = ["uv_build>=0.10.4,<0.11.0"]
build-backend = "uv_build"

[project]
name = "dc-support-mcp"
version = "1.12.6"
description = "MCP server for datacenter vendor support portals (ORI Industries, IREN)"
readme = "README.md"
requires-python = ">=3.12"
license = "Apache-2.0"
keywords = ["mcp", "model-context-protocol", "datacenter", "support", "vendor"]
dependencies = [
    "fastmcp>=3.0.0,<4",
    "mcp-common>=0.8.0",
    "playwright>=1.58.0",
    "requests>=2.32.5",
    "beautifulsoup4>=4.14.3",
    "lxml>=6.0.2",
    "python-dotenv>=1.1.0",
    "typer>=0.15.0",
]

[tool.uv.sources]
mcp-common = { git = "https://github.com/vhspace/mcp-common", tag = "v0.8.0" }

[project.scripts]
dc-support-mcp = "dc_support_mcp.mcp_server:main"
dc-support-setup = "dc_support_mcp.setup:main"
dc-support-cli = "dc_support_mcp.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "anyio>=4.0",
    "pytest-httpx>=0.34",
    "pytest-mock>=3.12.0",
    "inline-snapshot>=0.15",
    "mypy>=1.13",
    "ruff>=0.8",
    "pre-commit>=4.0",
    "responses>=0.25.0",
    "types-requests>=2.32",
    "types-beautifulsoup4>=4.12",
]

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
version_variables = [
    "src/dc_support_mcp/__init__.py:__version__",
    ".cursor-plugin/plugin.json:\"version\"",
    ".claude-plugin/plugin.json:\"version\"",
]
branch = "main"
upload_to_vcs_release = true
tag_format = "v{version}"

[tool.semantic_release.commit_parser_options]
allowed_tags = ["feat", "fix", "docs", "chore", "refactor", "test", "ci", "perf"]
minor_tags = ["feat"]
patch_tags = ["fix", "perf"]

[tool.semantic_release.changelog]
changelog_file = "CHANGELOG.md"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "RUF"]
ignore = ["E402", "E501", "SIM102", "SIM105", "SIM108", "SIM117", "UP047"]

[tool.mypy]
python_version = "3.12"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "unit: unit tests",
    "integration: integration tests",
    "e2e: end-to-end tests (requires credentials)",
    "slow: tests that involve browser automation",
]
